           3 databases included empty, default and full for testing.  
           This version is roughly ready, but not fully tested. Documenting gets started.
2020-08-25 catering.py imports errormessages not shown but written in catering_import.log in home directory of user.
2020-08-26 catering.py insert articles barcodescan and generating barcode separated
2020-08-26 catering.py bug repaired by viewing additional products.
2020-08-26 Documentatation_Catering_POS.pdf started, backend documentation follows
2020-08-26 catering.py by imports new products a log message is made for invalid barcode checks.
2020-08-27 Documentation changed and added explanation article menu
2020-08-27 catering.py not necessary menu purchasing removed and integrated in submenu.
2020-08-27 Documentation Catering_POS.pdf ready.
2020-08-27 catering.py bug in default bg_color groupbuttons repaired
2020-08-27 catering.py bug repaired with addition tables wrong name
2020-08-27 catering.backup and empty-catering.backup table addition name changed from additional in addition
2020-08-27 documentation added replace pictures from maingroups and logo
2020-08-30 catering.py views bug repaired by viewing tableviews with no records in database
2020-08-30 databases full_catering.backup catering.backup and empty-catering.backup changed for above problems
2020-08-30 catering.py error handling viewing for empty tables improved
2020-08-30 catering.py modest calculator error handling improved
2020-08-30 Documentation_Catering_POS.pdf under Purchasing deliveries addition item_stock in table articles about increase.
2020-08-31 catering.py import by expiring products first removed barcode in table loss for foreignkey link.
2020-09-02 catering.py EAN structure for printing EAN8 and EAN13 set to official dimensions
2020-09-02 databases full_catering.backup catering.backup and empty-catering.backup added selling_price, selling_contents 
           and item_unit in tables order_lines and sales