@@ -83,3 +83,4 @@
 2020-09-02 catering.py EAN structure for printing EAN8 and EAN13 set to official dimensions
 2020-09-02 databases full_catering.backup catering.backup and empty-catering.backup added selling_price, selling_contents 
            and item_unit in tables order_lines and sales
+2020-09-02 catering.py changed names item_price in selling_price and repaired bug blocking when no stock is present.
